Fix text wrap on home page

--- a/radboudumc-theme/sass/_home.scss
+++ b/radboudumc-theme/sass/_home.scss
@@ -56,6 +56,7 @@ Styles of the home page.
   }
 
   img {
+    float: right;
     max-height: 350px;
     max-width: 100%;
     border: 1px solid lighten($primary, 30);
@@ -63,9 +64,11 @@ Styles of the home page.
   }
 
   figcaption {
+    float: right;
     color: lighten($primary, 45);
     a {
       color: lighten($primary, 45);
+      white-space: nowrap;
     }
   }
 
